--- a/templates/base.html
+++ b/templates/base.html
@@ -88,13 +88,9 @@
 {% block header %}
 {% set navigation_bar = [
 ('index.html', 'Home'),
-('calendar.html', 'Schedule'),
-('papers.html', 'Papers'),
-('workshops.html', 'Workshops'),
-('chat.html', 'Chat'),
-('help.html', 'Help'),
 ] -%}
 
+<!-- ('calendar.html', 'Schedule') -->
 <nav
         class="navbar sticky-top navbar-expand-lg navbar-light bg-light mr-auto"
         id="main-nav"
@@ -174,7 +170,7 @@
 <footer class="footer bg-light p-4">
     <div class="container">
         <p class="float-right"><a href="#">Back to Top</a></p>
-        <p class="text-center">© 2020 {{config.organization}}</p>
+        <p class="text-center"> Agro-RL 2024 made with <a href="https://mini-conf.org">MiniConf</a></p>
     </div>
 </footer>
 
