--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
 <div class="jumbotron jumbotron-fluid back" style="padding-bottom: 20px;">
   <div class="row header p-6 m-5">
-    <div class="p-1 mx-auto text-center text-white col-md-9 col-sm-12">
+    <div class="p-1 mx-auto text-center col-md-9 col-sm-12" style="color: rgb(11, 250, 43); text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);">
       <h2>
         {{config.tagline|safe}}
       </h2>
