--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -7,8 +7,7 @@
 {% endblock %}
 
 {% block tabs %}
-{{ components.tabs([("calendar", "Calendar", "active"),
-        ("day", "Example Day", "")]) }}
+{{ components.tabs([ ("calendar", "Calendar", "active")])}}
 {% endblock %}
 
 {% block content %}
